--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
 
         .link-tool__content--rendered {
-            background: var(--color-border-light);
+            background: var(--color-border-light) !important;
             color: var(--color-text-main) !important;
         }
 
