--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
             color: var(--color-text-main) !important;
         }
 
+        .link-tool__description {
+            color: var(--color-text-main) !important;
+        }
+
+        .link-tool__title {
+            color: var(--color-text-main) !important;
+        }
+
         .link-tool__anchor {
             color: #98C379 !important;
         }
