--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             color: var(--color-text-main) !important;
         }
 
-        .link-tool__anchor {
+        span.link-tool__anchor {
             color: #98C379 !important;
         }
     </style>
