--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         span.link-tool__anchor {
             color: #98C379 !important;
         }
+        
+                ::selection {
+            background-color: #2C313C;
+        }
     </style>
 
 </head>
