--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 ::selection {
             background-color: #2C313C;
         }
+
+        .editorjs {
+            padding-left: 2px;
+            padding-right: 2px;
+        }
     </style>
 
 </head>
