--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             "style": "unordered",
                             "items": [
                                 "🔭&nbsp;I’m currently working on&nbsp;<a href=\"https://letsgo.isithere.sk\"><b>IsItHere</b></a>",
-                                "🌱&nbsp;I’m currently <b>trying&nbsp;to get to a middle school</b>",
+                                "🌱&nbsp;I’m currently <b>getting to a middle school</b>",
                                 "💬&nbsp;Ask me about&nbsp;<b>the never ending weirdness of Slovak GTFS Feeds</b>",
                                 "📫&nbsp;Reach me at&nbsp;<a href=\"mailto:meow@charliecat.space\"><b>meow@charliecat.space</b></a>",
                                 "🐈&nbsp;Fun fact&nbsp;<b>I like cats</b>"
